# skills-hub

./: .gitignore  README.md  pyproject.toml
general/afk-prd-loop/: SKILL.md
general/alert-tracker-pattern/: SKILL.md
general/autoresearch-scaffold/: SKILL.md
general/chakra-cli-inference-slack/: SKILL.md
general/ddc-demo/: SKILL.md
general/durable-work/: SKILL.md
general/flow-telugu-comedy-reel/: SKILL.md
general/frames-to-reel-ffmpeg/: SKILL.md
general/google-flow-agent-driver/: SKILL.md
general/grill-me/: SKILL.md
general/grok-imagine-agent-driver/: SKILL.md
general/harness-work/: SKILL.md
general/html-anything/: SKILL.md
general/hugging-science/: SKILL.md
general/insta-reel-scaffold/: SKILL.md  scaffold.sh
general/insta-video/: SKILL.md
general/instagram-reel-publish/: SKILL.md
general/instagram-reel-research/: SKILL.md
general/interactive-review/: SKILL.md
general/investsarva-dashboard-architecture/: SKILL.md
general/local-client-prospector/: SKILL.md
general/new-entry/: SKILL.md
general/panchayat-instagram-import/: SKILL.md
skills_hub/: __init__.py  cli.py  doctor.py  fs.py  indexer.py  install.py  linker.py  migrator.py  pustak_bridge.py  scaffolder.py  scanner.py  use_cases.py
tests/: conftest.py  test_cli_init.py  test_cli_install_pustak.py  test_cli_migrate.py  test_cli_query.py  test_cli_use_case.py  test_doctor.py  test_fs.py  test_indexer.py  test_install.py  test_linker.py  test_migrator.py  test_path_authority.py  test_pustak_bridge.py  test_scaffolder.py  test_sync.py  test_use_cases.py
(+71 files in other folders)
